started with tests of ILoadHelper